# PianoTour

./: .gitignore  .gitmodules  .replit  Dockerfile  chord_definitions.js  chord_definitions_with_frets.js  deploy.js  ensemble.mid  fly.toml  jsconfig.json  main.py  merge_chord_data.js  merged-chord-definitions.js  midi.py  output.mid  package-lock.json  package.json  piano.json  pyproject.toml  replit.nix  requirements.txt  run-tests.js  song.json  song.mid  song_recovered.json  spessasynth_settings.json  test.py  vexflow_to_midi.py
.devcontainer/: devcontainer.json
717/: editor - Copy (2).html  editor - Copy.html  index (copy).html  piano_editor_with_tooltips.html  pianostyles (copy).css  pianostyles without sidebar.css  player.html
718/: test.py
static/: appState.js  audioManager.js  chord-identification.test.js  demo_main.js  editor.css  file-handler-test.html  images.html  instrumentHelpers with gate.js  instrumentHelpers.js  ioHelpers.js  keyboardHelpers.js  listenerManager.js  local_main.js  local_main.js.map  midi-controller.js  musicEditorUI (copy).js  musicEditorUI copy.js  musicEditorUI.js  newInstrumentHelpers.js  newstyles.css  note-data.js  pianostyles (copy).css  pianostyles with sidebar.css  pianostyles.css  playbackHelpers old version.js  playbackHelpers.js  playback_worklet.js.map  player.js  practice.js  print.js  scoreHighlighter.js  scoreManager.js  scorePlayback.js  scoreRenderer.js  scoreWriter.js  spectrum.js  spesInstrumentHelpers.js  spesPlaybackHelpers.js  spessaSynthBridge.js  style.min.css  (+3 more)
templates/: _filehandler.html  _palette.html  (+35 more)
(+124 files in other folders)
